--- a/SignallingSimulator/timetableEditor.ui
+++ b/SignallingSimulator/timetableEditor.ui
@@ -21,7 +21,11 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="2">
-       <widget class="QLineEdit" name="mapNameText"/>
+       <widget class="QLineEdit" name="mapNameText">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+       </widget>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
@@ -100,9 +104,23 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="SaveCloseButton">
+      <widget class="QPushButton" name="verifyButton">
        <property name="text">
-        <string>Save and Close</string>
+        <string>Verify</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="closeButton">
+       <property name="text">
+        <string>Close</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="SaveButton">
+       <property name="text">
+        <string>Save </string>
        </property>
       </widget>
      </item>
@@ -179,17 +197,17 @@
       <string>Train Attributes</string>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
-      <item row="6" column="0" colspan="3">
-       <widget class="QPushButton" name="trainAttributeUpdateButton">
+      <item row="1" column="1" rowspan="2">
+       <widget class="QLineEdit" name="destinationText"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_8">
         <property name="text">
-         <string>Update</string>
+         <string>Load Time</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="2">
-       <widget class="QLineEdit" name="headcodeText"/>
-      </item>
-      <item row="5" column="2">
+      <item row="5" column="1">
        <widget class="QLineEdit" name="maxSpeedText"/>
       </item>
       <item row="4" column="0" rowspan="2">
@@ -199,51 +217,14 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label_8">
-        <property name="text">
-         <string>Load Time</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2" rowspan="2">
-       <widget class="QLineEdit" name="destinationText"/>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_5">
-        <property name="text">
-         <string>Headcode</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="label_7">
-        <property name="text">
-         <string>Destination</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="2">
+      <item row="3" column="1">
        <widget class="QTimeEdit" name="loadTimeText">
         <property name="displayFormat">
          <string>HH:mm:ss</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item row="0" column="3">
+      <item row="0" column="2">
        <spacer name="horizontalSpacer_3">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -252,6 +233,36 @@
          <size>
           <width>40</width>
           <height>20</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="headcodeText"/>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="label_7">
+        <property name="text">
+         <string>Destination</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_5">
+        <property name="text">
+         <string>Headcode</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <spacer name="verticalSpacer_2">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
          </size>
         </property>
        </spacer>
